# auto-bluray-tui

./: .gitignore  Dockerfile.jdk8  LICENSE  README.md  README_RELEASE.md  auto_bluray_tui_version.py  build.xml  dist.xml  install.py  pyproject.toml  requirements.txt  start.py
.github/workflows/: ci.yml  release.yml
demos/: grammar-v1-menu-model.json
demos/hdmv-lite-static-menu/: README.md  menu-compatibility.json  menu-compatibility.md  menu-model.json
docs/: HDMV deep-research-report.md  auto tui possible upgrades.md  blu-ray-menu-authoring.md  merged-codex-work-plan.md  roadmap-v0.2.md  walkthrough.md
docs/HDMV/: HDMV plan.md  HDMV-spec.md
hdcookbook/: .gitignore  Dockerfile.jdk8  README.md  user.vars.properties.example
hdcookbook/docs/: blu-ray-menu-authoring.md  walkthrough.md
hdcookbook/scripts/: build-sample-disc.sh  convert-pptx-menu.sh  fetch-opensubtitles.sh  get-tsmuxer.sh  install-bluray-deps.sh  launch-pptx-menu-preview.sh  launch-slides-menu-preview.sh
scripts/: analyze-bluray-project.sh  auto-burn-final-bluray.sh  build-sample-disc.sh  convert-pptx-menu.sh  create-bluray-authoring-plan.sh  create-final-bluray-iso.sh  fetch-opensubtitles.sh  install-bluray-deps.sh  launch-menu-preview.sh  launch-pptx-menu-preview.sh  monitor-bluray-project.sh  prepare-bluray-media.sh
tests/: test_burner.py  test_dependency_checks.py  test_install.py  test_menu_backends.py  test_pptx_action_parser.py  test_pptx_menu_converter.py  test_pptx_menu_project.py  test_public_paths.py  test_start_launcher.py  test_tui_monitor.py
tools/: bluray_burn.py  bluray_media_workflow.py  bluray_mux_plan.py  bluray_tui_monitor.py  burner.py  button_action_parser.py  dependency_checks.py  final_bluray_iso.py  html_menu_preview.py  menu_backends.py  opensubtitles_fetch.py  pptx_menu_converter.py  pptx_menu_project.py
xlets/: build.xml
(+33 files in other folders)
