[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-bluray-tui"
dynamic = ["version"]
description = "PowerPoint-to-Blu-ray autopilot for encoding, menu authoring, ISO creation, and disc burning."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Auto Blu-ray TUI contributors" }
]
dependencies = [
  "Pillow>=10.0",
  "requests>=2.31",
  "windows-curses>=2.3; platform_system == 'Windows'",
]
keywords = ["blu-ray", "bd-j", "authoring", "tui", "ffmpeg"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/cheeseb1234/auto-bluray-tui"
Repository = "https://github.com/cheeseb1234/auto-bluray-tui"
Issues = "https://github.com/cheeseb1234/auto-bluray-tui/issues"

[project.scripts]
auto-bluray-tui = "start:main"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "AuthoringTools",
  "DiscCreationTools",
  "xlets",
  "bin",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "E701", "E702"]

[tool.setuptools]
py-modules = ["start", "install", "auto_bluray_tui_version"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "auto_bluray_tui_version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
